--- a/app/frontend/style.css
+++ b/app/frontend/style.css
@@ -1,9 +1,9 @@
 header {
-                        background-color: #333;
-                        color: white;
-                        padding: 10px;
-                        text-align: center;
-                    }
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
 
 body {
     font-family: Arial, sans-serif;
@@ -126,4 +126,60 @@ label.custom-file-upload::after {
     /* Добавленные стили */
     padding: 5px; /* Добавлено для создания внутреннего пространства */
     display: inline-block; /* Добавлено, чтобы элемент занимал только необходимое */
+}
+
+
+
+label:hover {
+	background-color: #DDDDDD;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+	width: 100%;
+}
+
+.dropdown-content {
+    position: relative;
+    background-color: #f9f9f9;
+    min-width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.topic {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    cursor: pointer;
+}
+.topic-title{
+	/*ckground-color: #129812;*/
+	/*lor: white;*/
+	padding: 10px;
+}
+
+.topic:hover {
+	background-color: #f5f5f5;
+}
+.topic-title:hover {
+    background-color: #f5f5f5;
+	font-weight: bold;
+}
+
+.content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+	display: flex;
+    flex-wrap: wrap;
+}
+
+.active .content {
+    max-height: 1000px;
+    transition: max-height 0.3s ease-in;
+}
+
+.active .topic-title {
+    background-color: #e5e5e5;
+	font-weight: bold;
 }
