--- a/app/frontend/style.css
+++ b/app/frontend/style.css
@@ -191,3 +191,14 @@ label:hover {
     background-color: #e5e5e5;
 	font-weight: bold;
 }
+
+#processingMessage {
+            display: none;
+            background-color: #f1f1f1;
+            border: 1px solid #d4d4d4;
+            padding: 20px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
